# AI-agriculture-yield-production

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Evaluation_metrics.md  LICENSE.md  README.md  Requirements.txt  pyproject.toml
.github/workflows/: issue-create-automate-message.yml
Code/: app.py
Code/templates/: index.html
Dashboards/: dashboard.pbix
Datasets/: rice_data.csv  rice_data_outlier_removed.csv
Models/: scaler.pkl  test_predictions.csv
Notebooks/: 01_Data_preprocessing.ipynb  02_eda.ipynb  03_modelling.ipynb  04_Evaluation_Deployment.ipynb  05_Modular_Evaluation.ipynb  05_boosting_model.ipynb  06_Modular_Evaluation.ipynb
Notebooks/Models/: best_params.json  xgb_best_params.json
gemini_streamlit_app/: chatbot.py  gemini_service.py
src/: __init__.py  preprocessing_functions.py  svr_model.py
tests/: README.md  run_tests.py  test_data_preprocessing_comprehensive.py  test_data_preprocessing_old_broken.py.bak  test_preprocessing.py  test_preprocessing_simple.py
